// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._139sydh10,html._139sydh10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1lupc6g0 _1lh05ee10 _1lh05ee13">
+        <div class="sl5oi80 _139sydh8p _139sydh7l _139sydhax _139sydh9t _139sydh5d _139sydh69 _139sydhi9 _139sydh4j _139sydh4c _1lh05ee10 _1lh05ee13 _139sydh33 _139sydh36">
+          <span class="sl5oi80 _139sydh4x _1lh05ee0 _1lh05ee1 _1lh05ee1t _1lh05eea _1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .sl5oi80 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
.sl5oi81 {
  display: block;
}
.sl5oi82 {
  line-height: 1;
}
.sl5oi83 {
  list-style: none;
}
.sl5oi84 {
  quotes: none;
}
.sl5oi84:after,
.sl5oi84:before {
  content: "";
}
.sl5oi85 {
  border-collapse: collapse;
  border-spacing: 0;
}
.sl5oi86 {
  -webkit-appearance: none;
  appearance: none;
}
.sl5oi87 {
  background-color: transparent;
}
.sl5oi88 {
  outline: var(--_1j6vlxo10) solid transparent;
  transition: outline-color 0.125s ease;
}
.sl5oi88:focus-visible {
  outline-color: var(--_1j6vlxom);
}
.sl5oi8a {
  color: inherit;
}
.sl5oi8b:disabled {
  opacity: 1;
}
.sl5oi8b::-ms-expand {
  display: none;
}
.sl5oi8d[type="number"] {
  -moz-appearance: textfield;
}
.sl5oi8d[type="number"]::-webkit-inner-spin-button,
.sl5oi8d[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.sl5oi8d::-ms-clear {
  display: none;
}
.sl5oi8d::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.sl5oi8g {
  color: inherit;
  text-decoration: none;
}
._139sydh0 {
  overflow: hidden;
}
._139sydh1 {
  overflow: scroll;
}
._139sydh2 {
  overflow: visible;
}
._139sydh3 {
  overflow: auto;
}
._139sydh4 {
  -webkit-user-select: none;
  user-select: none;
}
._139sydh5 {
  outline: var(--_1j6vlxo10) solid transparent;
  transition: outline-color 0.125s ease;
}
._139sydh5:focus-visible {
  outline-color: var(--_1j6vlxom);
}
._139sydh6 {
  opacity: 0;
}
._139sydh7 {
  z-index: 0;
}
._139sydh8 {
  z-index: 1;
}
._139sydh9 {
  z-index: 2;
}
._139sydha {
  z-index: 90;
}
._139sydhb {
  z-index: 100;
}
._139sydhc {
  z-index: 200;
}
._139sydhd {
  z-index: 290;
}
._139sydhe {
  z-index: 300;
}
._139sydhf {
  z-index: 400;
}
._139sydhg {
  cursor: default;
}
._139sydhh {
  cursor: pointer;
}
._139sydhi {
  pointer-events: none;
}
._139sydhj {
  top: 0;
}
._139sydhk {
  bottom: 0;
}
._139sydhl {
  left: 0;
}
._139sydhm {
  right: 0;
}
._139sydhn {
  height: 100%;
}
._139sydho {
  height: var(--_1j6vlxo9);
}
._139sydhp {
  width: 100%;
}
._139sydhq {
  width: var(--_1j6vlxo9);
}
._139sydhr {
  min-width: 0;
}
._139sydhs {
  max-width: var(--_1j6vlxo11);
}
._139sydht {
  max-width: var(--_1j6vlxo12);
}
._139sydhu {
  max-width: var(--_1j6vlxo13);
}
._139sydhv {
  max-width: var(--_1j6vlxo14);
}
._139sydhw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._139sydhx {
  transition: var(--_1j6vlxo5h);
}
._139sydhy {
  transition: var(--_1j6vlxo5i);
}
._139sydhz:active {
  transform: var(--_1j6vlxo5j);
}
html._139sydh10 ._139sydh12,
html:not(._139sydh10) ._139sydh11 {
  background: var(--_1j6vlxo1s);
}
html._139sydh10 ._139sydh14,
html:not(._139sydh10) ._139sydh13 {
  background: var(--_1j6vlxo1t);
}
html._139sydh10 ._139sydh16,
html:not(._139sydh10) ._139sydh15 {
  background: var(--_1j6vlxo1u);
}
html._139sydh10 ._139sydh18,
html:not(._139sydh10) ._139sydh17 {
  background: var(--_1j6vlxo1v);
}
html._139sydh10 ._139sydh1a,
html:not(._139sydh10) ._139sydh19 {
  background: var(--_1j6vlxo1w);
}
html._139sydh10 ._139sydh1c,
html:not(._139sydh10) ._139sydh1b {
  background: var(--_1j6vlxo1x);
}
html._139sydh10 ._139sydh1e,
html:not(._139sydh10) ._139sydh1d {
  background: var(--_1j6vlxo1y);
}
html._139sydh10 ._139sydh1g,
html:not(._139sydh10) ._139sydh1f {
  background: var(--_1j6vlxo1z);
}
html._139sydh10 ._139sydh1i,
html:not(._139sydh10) ._139sydh1h {
  background: var(--_1j6vlxo20);
}
html._139sydh10 ._139sydh1k,
html:not(._139sydh10) ._139sydh1j {
  background: var(--_1j6vlxo21);
}
html._139sydh10 ._139sydh1m,
html:not(._139sydh10) ._139sydh1l {
  background: var(--_1j6vlxo22);
}
html._139sydh10 ._139sydh1o,
html:not(._139sydh10) ._139sydh1n {
  background: var(--_1j6vlxo23);
}
html._139sydh10 ._139sydh1q,
html:not(._139sydh10) ._139sydh1p {
  background: var(--_1j6vlxo24);
}
html._139sydh10 ._139sydh1s,
html:not(._139sydh10) ._139sydh1r {
  background: var(--_1j6vlxo25);
}
html._139sydh10 ._139sydh1u,
html:not(._139sydh10) ._139sydh1t {
  background: var(--_1j6vlxo26);
}
html._139sydh10 ._139sydh1w,
html:not(._139sydh10) ._139sydh1v {
  background: var(--_1j6vlxo27);
}
html._139sydh10 ._139sydh1y,
html:not(._139sydh10) ._139sydh1x {
  background: var(--_1j6vlxo28);
}
html._139sydh10 ._139sydh20,
html:not(._139sydh10) ._139sydh1z {
  background: var(--_1j6vlxo29);
}
html._139sydh10 ._139sydh22,
html:not(._139sydh10) ._139sydh21 {
  background: var(--_1j6vlxo2a);
}
html._139sydh10 ._139sydh24,
html:not(._139sydh10) ._139sydh23 {
  background: var(--_1j6vlxo2b);
}
html._139sydh10 ._139sydh26,
html:not(._139sydh10) ._139sydh25 {
  background: var(--_1j6vlxo2c);
}
html._139sydh10 ._139sydh28,
html:not(._139sydh10) ._139sydh27 {
  background: var(--_1j6vlxo2d);
}
html._139sydh10 ._139sydh2a,
html:not(._139sydh10) ._139sydh29 {
  background: var(--_1j6vlxo2e);
}
html._139sydh10 ._139sydh2c,
html:not(._139sydh10) ._139sydh2b {
  background: var(--_1j6vlxo2f);
}
html._139sydh10 ._139sydh2e,
html:not(._139sydh10) ._139sydh2d {
  background: var(--_1j6vlxo2g);
}
html._139sydh10 ._139sydh2g,
html:not(._139sydh10) ._139sydh2f {
  background: var(--_1j6vlxo2h);
}
html._139sydh10 ._139sydh2i,
html:not(._139sydh10) ._139sydh2h {
  background: var(--_1j6vlxo2i);
}
html._139sydh10 ._139sydh2k,
html:not(._139sydh10) ._139sydh2j {
  background: var(--_1j6vlxo2j);
}
html._139sydh10 ._139sydh2m,
html:not(._139sydh10) ._139sydh2l {
  background: var(--_1j6vlxo2k);
}
html._139sydh10 ._139sydh2o,
html:not(._139sydh10) ._139sydh2n {
  background: var(--_1j6vlxo2l);
}
html._139sydh10 ._139sydh2q,
html:not(._139sydh10) ._139sydh2p {
  background: var(--_1j6vlxo2m);
}
html._139sydh10 ._139sydh2s,
html:not(._139sydh10) ._139sydh2r {
  background: var(--_1j6vlxo2n);
}
html._139sydh10 ._139sydh2u,
html:not(._139sydh10) ._139sydh2t {
  background: var(--_1j6vlxo2o);
}
html._139sydh10 ._139sydh2w,
html:not(._139sydh10) ._139sydh2v {
  background: var(--_1j6vlxo2p);
}
html._139sydh10 ._139sydh2y,
html:not(._139sydh10) ._139sydh2x {
  background: var(--_1j6vlxo2q);
}
html._139sydh10 ._139sydh30,
html:not(._139sydh10) ._139sydh2z {
  background: var(--_1j6vlxo2r);
}
html._139sydh10 ._139sydh32,
html:not(._139sydh10) ._139sydh31 {
  background: var(--_1j6vlxo2s);
}
html._139sydh10 ._139sydh34,
html:not(._139sydh10) ._139sydh33 {
  background: var(--_1j6vlxo2t);
}
html._139sydh10 ._139sydh36,
html:not(._139sydh10) ._139sydh35 {
  background: var(--_1j6vlxo2u);
}
html._139sydh10 ._139sydh38,
html:not(._139sydh10) ._139sydh37 {
  box-shadow: var(--_1j6vlxo5k);
}
html._139sydh10 ._139sydh3a,
html:not(._139sydh10) ._139sydh39 {
  box-shadow: var(--_1j6vlxo5l);
}
html._139sydh10 ._139sydh3c,
html:not(._139sydh10) ._139sydh3b {
  box-shadow: var(--_1j6vlxo5m);
}
html._139sydh10 ._139sydh3e,
html:not(._139sydh10) ._139sydh3d {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxof);
}
html._139sydh10 ._139sydh3g,
html:not(._139sydh10) ._139sydh3f {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxog);
}
html._139sydh10 ._139sydh3i,
html:not(._139sydh10) ._139sydh3h {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxof);
}
html._139sydh10 ._139sydh3k,
html:not(._139sydh10) ._139sydh3j {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxog);
}
html._139sydh10 ._139sydh3m,
html:not(._139sydh10) ._139sydh3l {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxoh);
}
html._139sydh10 ._139sydh3o,
html:not(._139sydh10) ._139sydh3n {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxoi);
}
html._139sydh10 ._139sydh3q,
html:not(._139sydh10) ._139sydh3p {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxoj);
}
html._139sydh10 ._139sydh3s,
html:not(._139sydh10) ._139sydh3r {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxoj);
}
html._139sydh10 ._139sydh3u,
html:not(._139sydh10) ._139sydh3t {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxok);
}
html._139sydh10 ._139sydh3w,
html:not(._139sydh10) ._139sydh3v {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxok);
}
html._139sydh10 ._139sydh3y,
html:not(._139sydh10) ._139sydh3x {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxol);
}
html._139sydh10 ._139sydh40,
html:not(._139sydh10) ._139sydh3z {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxon);
}
html._139sydh10 ._139sydh42,
html:not(._139sydh10) ._139sydh41 {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxon);
}
html._139sydh10 ._139sydh44,
html:not(._139sydh10) ._139sydh43 {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxoo);
}
html._139sydh10 ._139sydh46,
html:not(._139sydh10) ._139sydh45 {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxoo);
}
html._139sydh10 ._139sydh48,
html:not(._139sydh10) ._139sydh47 {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxop);
}
html._139sydh10 ._139sydh4a,
html:not(._139sydh10) ._139sydh49 {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxoq);
}
html._139sydh10 ._139sydh4c,
html:not(._139sydh10) ._139sydh4b {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxor);
}
html._139sydh10 ._139sydh4e,
html:not(._139sydh10) ._139sydh4d {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxor);
}
html._139sydh10 ._139sydh4g,
html:not(._139sydh10) ._139sydh4f {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxos);
}
html._139sydh10 ._139sydh4i,
html:not(._139sydh10) ._139sydh4h {
  box-shadow: inset 0 0 0 var(--_1j6vlxoz) var(--_1j6vlxos);
}
html._139sydh10 ._139sydh4k,
html:not(._139sydh10) ._139sydh4j {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxot);
}
html._139sydh10 ._139sydh4m,
html:not(._139sydh10) ._139sydh4l {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxou);
}
html._139sydh10 ._139sydh4o,
html:not(._139sydh10) ._139sydh4n {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxov);
}
html._139sydh10 ._139sydh4q,
html:not(._139sydh10) ._139sydh4p {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxow);
}
html._139sydh10 ._139sydh4s,
html:not(._139sydh10) ._139sydh4r {
  box-shadow: inset 0 0 0 var(--_1j6vlxoy) var(--_1j6vlxox);
}
._139sydh4t {
  display: none;
}
._139sydh4x {
  display: block;
}
._139sydh51 {
  display: inline;
}
._139sydh55 {
  display: inline-block;
}
._139sydh59 {
  display: flex;
}
._139sydh5d {
  position: relative;
}
._139sydh5h {
  position: absolute;
}
._139sydh5l {
  position: fixed;
}
._139sydh5p {
  position: sticky;
}
._139sydh5t {
  border-radius: 0;
}
._139sydh5x {
  border-radius: 9999px;
}
._139sydh61 {
  border-radius: var(--_1j6vlxob);
}
._139sydh65 {
  border-radius: var(--_1j6vlxoc);
}
._139sydh69 {
  border-radius: var(--_1j6vlxod);
}
._139sydh6d {
  border-radius: var(--_1j6vlxoe);
}
._139sydh6h {
  gap: var(--_1j6vlxo0);
}
._139sydh6l {
  gap: var(--_1j6vlxo1);
}
._139sydh6p {
  gap: var(--_1j6vlxo2);
}
._139sydh6t {
  gap: var(--_1j6vlxo3);
}
._139sydh6x {
  gap: var(--_1j6vlxo4);
}
._139sydh71 {
  gap: var(--_1j6vlxo5);
}
._139sydh75 {
  gap: var(--_1j6vlxo6);
}
._139sydh79 {
  gap: var(--_1j6vlxo7);
}
._139sydh7d {
  gap: var(--_1j6vlxo8);
}
._139sydh7h {
  gap: 0;
}
._139sydh7l {
  padding-top: var(--_1j6vlxo0);
}
._139sydh7p {
  padding-top: var(--_1j6vlxo1);
}
._139sydh7t {
  padding-top: var(--_1j6vlxo2);
}
._139sydh7x {
  padding-top: var(--_1j6vlxo3);
}
._139sydh81 {
  padding-top: var(--_1j6vlxo4);
}
._139sydh85 {
  padding-top: var(--_1j6vlxo5);
}
._139sydh89 {
  padding-top: var(--_1j6vlxo6);
}
._139sydh8d {
  padding-top: var(--_1j6vlxo7);
}
._139sydh8h {
  padding-top: var(--_1j6vlxo8);
}
._139sydh8l {
  padding-top: 0;
}
._139sydh8p {
  padding-bottom: var(--_1j6vlxo0);
}
._139sydh8t {
  padding-bottom: var(--_1j6vlxo1);
}
._139sydh8x {
  padding-bottom: var(--_1j6vlxo2);
}
._139sydh91 {
  padding-bottom: var(--_1j6vlxo3);
}
._139sydh95 {
  padding-bottom: var(--_1j6vlxo4);
}
._139sydh99 {
  padding-bottom: var(--_1j6vlxo5);
}
._139sydh9d {
  padding-bottom: var(--_1j6vlxo6);
}
._139sydh9h {
  padding-bottom: var(--_1j6vlxo7);
}
._139sydh9l {
  padding-bottom: var(--_1j6vlxo8);
}
._139sydh9p {
  padding-bottom: 0;
}
._139sydh9t {
  padding-right: var(--_1j6vlxo0);
}
._139sydh9x {
  padding-right: var(--_1j6vlxo1);
}
._139sydha1 {
  padding-right: var(--_1j6vlxo2);
}
._139sydha5 {
  padding-right: var(--_1j6vlxo3);
}
._139sydha9 {
  padding-right: var(--_1j6vlxo4);
}
._139sydhad {
  padding-right: var(--_1j6vlxo5);
}
._139sydhah {
  padding-right: var(--_1j6vlxo6);
}
._139sydhal {
  padding-right: var(--_1j6vlxo7);
}
._139sydhap {
  padding-right: var(--_1j6vlxo8);
}
._139sydhat {
  padding-right: 0;
}
._139sydhax {
  padding-left: var(--_1j6vlxo0);
}
._139sydhb1 {
  padding-left: var(--_1j6vlxo1);
}
._139sydhb5 {
  padding-left: var(--_1j6vlxo2);
}
._139sydhb9 {
  padding-left: var(--_1j6vlxo3);
}
._139sydhbd {
  padding-left: var(--_1j6vlxo4);
}
._139sydhbh {
  padding-left: var(--_1j6vlxo5);
}
._139sydhbl {
  padding-left: var(--_1j6vlxo6);
}
._139sydhbp {
  padding-left: var(--_1j6vlxo7);
}
._139sydhbt {
  padding-left: var(--_1j6vlxo8);
}
._139sydhbx {
  padding-left: 0;
}
._139sydhc1 {
  margin-top: var(--_1j6vlxo0);
}
._139sydhc5 {
  margin-top: var(--_1j6vlxo1);
}
._139sydhc9 {
  margin-top: var(--_1j6vlxo2);
}
._139sydhcd {
  margin-top: var(--_1j6vlxo3);
}
._139sydhch {
  margin-top: var(--_1j6vlxo4);
}
._139sydhcl {
  margin-top: var(--_1j6vlxo5);
}
._139sydhcp {
  margin-top: var(--_1j6vlxo6);
}
._139sydhct {
  margin-top: var(--_1j6vlxo7);
}
._139sydhcx {
  margin-top: var(--_1j6vlxo8);
}
._139sydhd1 {
  margin-top: 0;
}
._139sydhd5 {
  margin-bottom: var(--_1j6vlxo0);
}
._139sydhd9 {
  margin-bottom: var(--_1j6vlxo1);
}
._139sydhdd {
  margin-bottom: var(--_1j6vlxo2);
}
._139sydhdh {
  margin-bottom: var(--_1j6vlxo3);
}
._139sydhdl {
  margin-bottom: var(--_1j6vlxo4);
}
._139sydhdp {
  margin-bottom: var(--_1j6vlxo5);
}
._139sydhdt {
  margin-bottom: var(--_1j6vlxo6);
}
._139sydhdx {
  margin-bottom: var(--_1j6vlxo7);
}
._139sydhe1 {
  margin-bottom: var(--_1j6vlxo8);
}
._139sydhe5 {
  margin-bottom: 0;
}
._139sydhe9 {
  margin-right: var(--_1j6vlxo0);
}
._139sydhed {
  margin-right: var(--_1j6vlxo1);
}
._139sydheh {
  margin-right: var(--_1j6vlxo2);
}
._139sydhel {
  margin-right: var(--_1j6vlxo3);
}
._139sydhep {
  margin-right: var(--_1j6vlxo4);
}
._139sydhet {
  margin-right: var(--_1j6vlxo5);
}
._139sydhex {
  margin-right: var(--_1j6vlxo6);
}
._139sydhf1 {
  margin-right: var(--_1j6vlxo7);
}
._139sydhf5 {
  margin-right: var(--_1j6vlxo8);
}
._139sydhf9 {
  margin-right: 0;
}
._139sydhfd {
  margin-left: var(--_1j6vlxo0);
}
._139sydhfh {
  margin-left: var(--_1j6vlxo1);
}
._139sydhfl {
  margin-left: var(--_1j6vlxo2);
}
._139sydhfp {
  margin-left: var(--_1j6vlxo3);
}
._139sydhft {
  margin-left: var(--_1j6vlxo4);
}
._139sydhfx {
  margin-left: var(--_1j6vlxo5);
}
._139sydhg1 {
  margin-left: var(--_1j6vlxo6);
}
._139sydhg5 {
  margin-left: var(--_1j6vlxo7);
}
._139sydhg9 {
  margin-left: var(--_1j6vlxo8);
}
._139sydhgd {
  margin-left: 0;
}
._139sydhgh {
  align-items: flex-start;
}
._139sydhgl {
  align-items: center;
}
._139sydhgp {
  align-items: flex-end;
}
._139sydhgt {
  justify-content: flex-start;
}
._139sydhgx {
  justify-content: center;
}
._139sydhh1 {
  justify-content: flex-end;
}
._139sydhh5 {
  justify-content: space-between;
}
._139sydhh9 {
  flex-direction: row;
}
._139sydhhd {
  flex-direction: row-reverse;
}
._139sydhhh {
  flex-direction: column;
}
._139sydhhl {
  flex-direction: column-reverse;
}
._139sydhhp {
  flex-wrap: wrap;
}
._139sydhht {
  flex-wrap: nowrap;
}
._139sydhhx {
  flex-shrink: 0;
}
._139sydhi1 {
  flex-grow: 0;
}
._139sydhi5 {
  flex-grow: 1;
}
._139sydhi9 {
  text-align: left;
}
._139sydhid {
  text-align: center;
}
._139sydhih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._139sydh4u {
    display: none;
  }
  ._139sydh4y {
    display: block;
  }
  ._139sydh52 {
    display: inline;
  }
  ._139sydh56 {
    display: inline-block;
  }
  ._139sydh5a {
    display: flex;
  }
  ._139sydh5e {
    position: relative;
  }
  ._139sydh5i {
    position: absolute;
  }
  ._139sydh5m {
    position: fixed;
  }
  ._139sydh5q {
    position: sticky;
  }
  ._139sydh5u {
    border-radius: 0;
  }
  ._139sydh5y {
    border-radius: 9999px;
  }
  ._139sydh62 {
    border-radius: var(--_1j6vlxob);
  }
  ._139sydh66 {
    border-radius: var(--_1j6vlxoc);
  }
  ._139sydh6a {
    border-radius: var(--_1j6vlxod);
  }
  ._139sydh6e {
    border-radius: var(--_1j6vlxoe);
  }
  ._139sydh6i {
    gap: var(--_1j6vlxo0);
  }
  ._139sydh6m {
    gap: var(--_1j6vlxo1);
  }
  ._139sydh6q {
    gap: var(--_1j6vlxo2);
  }
  ._139sydh6u {
    gap: var(--_1j6vlxo3);
  }
  ._139sydh6y {
    gap: var(--_1j6vlxo4);
  }
  ._139sydh72 {
    gap: var(--_1j6vlxo5);
  }
  ._139sydh76 {
    gap: var(--_1j6vlxo6);
  }
  ._139sydh7a {
    gap: var(--_1j6vlxo7);
  }
  ._139sydh7e {
    gap: var(--_1j6vlxo8);
  }
  ._139sydh7i {
    gap: 0;
  }
  ._139sydh7m {
    padding-top: var(--_1j6vlxo0);
  }
  ._139sydh7q {
    padding-top: var(--_1j6vlxo1);
  }
  ._139sydh7u {
    padding-top: var(--_1j6vlxo2);
  }
  ._139sydh7y {
    padding-top: var(--_1j6vlxo3);
  }
  ._139sydh82 {
    padding-top: var(--_1j6vlxo4);
  }
  ._139sydh86 {
    padding-top: var(--_1j6vlxo5);
  }
  ._139sydh8a {
    padding-top: var(--_1j6vlxo6);
  }
  ._139sydh8e {
    padding-top: var(--_1j6vlxo7);
  }
  ._139sydh8i {
    padding-top: var(--_1j6vlxo8);
  }
  ._139sydh8m {
    padding-top: 0;
  }
  ._139sydh8q {
    padding-bottom: var(--_1j6vlxo0);
  }
  ._139sydh8u {
    padding-bottom: var(--_1j6vlxo1);
  }
  ._139sydh8y {
    padding-bottom: var(--_1j6vlxo2);
  }
  ._139sydh92 {
    padding-bottom: var(--_1j6vlxo3);
  }
  ._139sydh96 {
    padding-bottom: var(--_1j6vlxo4);
  }
  ._139sydh9a {
    padding-bottom: var(--_1j6vlxo5);
  }
  ._139sydh9e {
    padding-bottom: var(--_1j6vlxo6);
  }
  ._139sydh9i {
    padding-bottom: var(--_1j6vlxo7);
  }
  ._139sydh9m {
    padding-bottom: var(--_1j6vlxo8);
  }
  ._139sydh9q {
    padding-bottom: 0;
  }
  ._139sydh9u {
    padding-right: var(--_1j6vlxo0);
  }
  ._139sydh9y {
    padding-right: var(--_1j6vlxo1);
  }
  ._139sydha2 {
    padding-right: var(--_1j6vlxo2);
  }
  ._139sydha6 {
    padding-right: var(--_1j6vlxo3);
  }
  ._139sydhaa {
    padding-right: var(--_1j6vlxo4);
  }
  ._139sydhae {
    padding-right: var(--_1j6vlxo5);
  }
  ._139sydhai {
    padding-right: var(--_1j6vlxo6);
  }
  ._139sydham {
    padding-right: var(--_1j6vlxo7);
  }
  ._139sydhaq {
    padding-right: var(--_1j6vlxo8);
  }
  ._139sydhau {
    padding-right: 0;
  }
  ._139sydhay {
    padding-left: var(--_1j6vlxo0);
  }
  ._139sydhb2 {
    padding-left: var(--_1j6vlxo1);
  }
  ._139sydhb6 {
    padding-left: var(--_1j6vlxo2);
  }
  ._139sydhba {
    padding-left: var(--_1j6vlxo3);
  }
  ._139sydhbe {
    padding-left: var(--_1j6vlxo4);
  }
  ._139sydhbi {
    padding-left: var(--_1j6vlxo5);
  }
  ._139sydhbm {
    padding-left: var(--_1j6vlxo6);
  }
  ._139sydhbq {
    padding-left: var(--_1j6vlxo7);
  }
  ._139sydhbu {
    padding-left: var(--_1j6vlxo8);
  }
  ._139sydhby {
    padding-left: 0;
  }
  ._139sydhc2 {
    margin-top: var(--_1j6vlxo0);
  }
  ._139sydhc6 {
    margin-top: var(--_1j6vlxo1);
  }
  ._139sydhca {
    margin-top: var(--_1j6vlxo2);
  }
  ._139sydhce {
    margin-top: var(--_1j6vlxo3);
  }
  ._139sydhci {
    margin-top: var(--_1j6vlxo4);
  }
  ._139sydhcm {
    margin-top: var(--_1j6vlxo5);
  }
  ._139sydhcq {
    margin-top: var(--_1j6vlxo6);
  }
  ._139sydhcu {
    margin-top: var(--_1j6vlxo7);
  }
  ._139sydhcy {
    margin-top: var(--_1j6vlxo8);
  }
  ._139sydhd2 {
    margin-top: 0;
  }
  ._139sydhd6 {
    margin-bottom: var(--_1j6vlxo0);
  }
  ._139sydhda {
    margin-bottom: var(--_1j6vlxo1);
  }
  ._139sydhde {
    margin-bottom: var(--_1j6vlxo2);
  }
  ._139sydhdi {
    margin-bottom: var(--_1j6vlxo3);
  }
  ._139sydhdm {
    margin-bottom: var(--_1j6vlxo4);
  }
  ._139sydhdq {
    margin-bottom: var(--_1j6vlxo5);
  }
  ._139sydhdu {
    margin-bottom: var(--_1j6vlxo6);
  }
  ._139sydhdy {
    margin-bottom: var(--_1j6vlxo7);
  }
  ._139sydhe2 {
    margin-bottom: var(--_1j6vlxo8);
  }
  ._139sydhe6 {
    margin-bottom: 0;
  }
  ._139sydhea {
    margin-right: var(--_1j6vlxo0);
  }
  ._139sydhee {
    margin-right: var(--_1j6vlxo1);
  }
  ._139sydhei {
    margin-right: var(--_1j6vlxo2);
  }
  ._139sydhem {
    margin-right: var(--_1j6vlxo3);
  }
  ._139sydheq {
    margin-right: var(--_1j6vlxo4);
  }
  ._139sydheu {
    margin-right: var(--_1j6vlxo5);
  }
  ._139sydhey {
    margin-right: var(--_1j6vlxo6);
  }
  ._139sydhf2 {
    margin-right: var(--_1j6vlxo7);
  }
  ._139sydhf6 {
    margin-right: var(--_1j6vlxo8);
  }
  ._139sydhfa {
    margin-right: 0;
  }
  ._139sydhfe {
    margin-left: var(--_1j6vlxo0);
  }
  ._139sydhfi {
    margin-left: var(--_1j6vlxo1);
  }
  ._139sydhfm {
    margin-left: var(--_1j6vlxo2);
  }
  ._139sydhfq {
    margin-left: var(--_1j6vlxo3);
  }
  ._139sydhfu {
    margin-left: var(--_1j6vlxo4);
  }
  ._139sydhfy {
    margin-left: var(--_1j6vlxo5);
  }
  ._139sydhg2 {
    margin-left: var(--_1j6vlxo6);
  }
  ._139sydhg6 {
    margin-left: var(--_1j6vlxo7);
  }
  ._139sydhga {
    margin-left: var(--_1j6vlxo8);
  }
  ._139sydhge {
    margin-left: 0;
  }
  ._139sydhgi {
    align-items: flex-start;
  }
  ._139sydhgm {
    align-items: center;
  }
  ._139sydhgq {
    align-items: flex-end;
  }
  ._139sydhgu {
    justify-content: flex-start;
  }
  ._139sydhgy {
    justify-content: center;
  }
  ._139sydhh2 {
    justify-content: flex-end;
  }
  ._139sydhh6 {
    justify-content: space-between;
  }
  ._139sydhha {
    flex-direction: row;
  }
  ._139sydhhe {
    flex-direction: row-reverse;
  }
  ._139sydhhi {
    flex-direction: column;
  }
  ._139sydhhm {
    flex-direction: column-reverse;
  }
  ._139sydhhq {
    flex-wrap: wrap;
  }
  ._139sydhhu {
    flex-wrap: nowrap;
  }
  ._139sydhhy {
    flex-shrink: 0;
  }
  ._139sydhi2 {
    flex-grow: 0;
  }
  ._139sydhi6 {
    flex-grow: 1;
  }
  ._139sydhia {
    text-align: left;
  }
  ._139sydhie {
    text-align: center;
  }
  ._139sydhii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._139sydh4v {
    display: none;
  }
  ._139sydh4z {
    display: block;
  }
  ._139sydh53 {
    display: inline;
  }
  ._139sydh57 {
    display: inline-block;
  }
  ._139sydh5b {
    display: flex;
  }
  ._139sydh5f {
    position: relative;
  }
  ._139sydh5j {
    position: absolute;
  }
  ._139sydh5n {
    position: fixed;
  }
  ._139sydh5r {
    position: sticky;
  }
  ._139sydh5v {
    border-radius: 0;
  }
  ._139sydh5z {
    border-radius: 9999px;
  }
  ._139sydh63 {
    border-radius: var(--_1j6vlxob);
  }
  ._139sydh67 {
    border-radius: var(--_1j6vlxoc);
  }
  ._139sydh6b {
    border-radius: var(--_1j6vlxod);
  }
  ._139sydh6f {
    border-radius: var(--_1j6vlxoe);
  }
  ._139sydh6j {
    gap: var(--_1j6vlxo0);
  }
  ._139sydh6n {
    gap: var(--_1j6vlxo1);
  }
  ._139sydh6r {
    gap: var(--_1j6vlxo2);
  }
  ._139sydh6v {
    gap: var(--_1j6vlxo3);
  }
  ._139sydh6z {
    gap: var(--_1j6vlxo4);
  }
  ._139sydh73 {
    gap: var(--_1j6vlxo5);
  }
  ._139sydh77 {
    gap: var(--_1j6vlxo6);
  }
  ._139sydh7b {
    gap: var(--_1j6vlxo7);
  }
  ._139sydh7f {
    gap: var(--_1j6vlxo8);
  }
  ._139sydh7j {
    gap: 0;
  }
  ._139sydh7n {
    padding-top: var(--_1j6vlxo0);
  }
  ._139sydh7r {
    padding-top: var(--_1j6vlxo1);
  }
  ._139sydh7v {
    padding-top: var(--_1j6vlxo2);
  }
  ._139sydh7z {
    padding-top: var(--_1j6vlxo3);
  }
  ._139sydh83 {
    padding-top: var(--_1j6vlxo4);
  }
  ._139sydh87 {
    padding-top: var(--_1j6vlxo5);
  }
  ._139sydh8b {
    padding-top: var(--_1j6vlxo6);
  }
  ._139sydh8f {
    padding-top: var(--_1j6vlxo7);
  }
  ._139sydh8j {
    padding-top: var(--_1j6vlxo8);
  }
  ._139sydh8n {
    padding-top: 0;
  }
  ._139sydh8r {
    padding-bottom: var(--_1j6vlxo0);
  }
  ._139sydh8v {
    padding-bottom: var(--_1j6vlxo1);
  }
  ._139sydh8z {
    padding-bottom: var(--_1j6vlxo2);
  }
  ._139sydh93 {
    padding-bottom: var(--_1j6vlxo3);
  }
  ._139sydh97 {
    padding-bottom: var(--_1j6vlxo4);
  }
  ._139sydh9b {
    padding-bottom: var(--_1j6vlxo5);
  }
  ._139sydh9f {
    padding-bottom: var(--_1j6vlxo6);
  }
  ._139sydh9j {
    padding-bottom: var(--_1j6vlxo7);
  }
  ._139sydh9n {
    padding-bottom: var(--_1j6vlxo8);
  }
  ._139sydh9r {
    padding-bottom: 0;
  }
  ._139sydh9v {
    padding-right: var(--_1j6vlxo0);
  }
  ._139sydh9z {
    padding-right: var(--_1j6vlxo1);
  }
  ._139sydha3 {
    padding-right: var(--_1j6vlxo2);
  }
  ._139sydha7 {
    padding-right: var(--_1j6vlxo3);
  }
  ._139sydhab {
    padding-right: var(--_1j6vlxo4);
  }
  ._139sydhaf {
    padding-right: var(--_1j6vlxo5);
  }
  ._139sydhaj {
    padding-right: var(--_1j6vlxo6);
  }
  ._139sydhan {
    padding-right: var(--_1j6vlxo7);
  }
  ._139sydhar {
    padding-right: var(--_1j6vlxo8);
  }
  ._139sydhav {
    padding-right: 0;
  }
  ._139sydhaz {
    padding-left: var(--_1j6vlxo0);
  }
  ._139sydhb3 {
    padding-left: var(--_1j6vlxo1);
  }
  ._139sydhb7 {
    padding-left: var(--_1j6vlxo2);
  }
  ._139sydhbb {
    padding-left: var(--_1j6vlxo3);
  }
  ._139sydhbf {
    padding-left: var(--_1j6vlxo4);
  }
  ._139sydhbj {
    padding-left: var(--_1j6vlxo5);
  }
  ._139sydhbn {
    padding-left: var(--_1j6vlxo6);
  }
  ._139sydhbr {
    padding-left: var(--_1j6vlxo7);
  }
  ._139sydhbv {
    padding-left: var(--_1j6vlxo8);
  }
  ._139sydhbz {
    padding-left: 0;
  }
  ._139sydhc3 {
    margin-top: var(--_1j6vlxo0);
  }
  ._139sydhc7 {
    margin-top: var(--_1j6vlxo1);
  }
  ._139sydhcb {
    margin-top: var(--_1j6vlxo2);
  }
  ._139sydhcf {
    margin-top: var(--_1j6vlxo3);
  }
  ._139sydhcj {
    margin-top: var(--_1j6vlxo4);
  }
  ._139sydhcn {
    margin-top: var(--_1j6vlxo5);
  }
  ._139sydhcr {
    margin-top: var(--_1j6vlxo6);
  }
  ._139sydhcv {
    margin-top: var(--_1j6vlxo7);
  }
  ._139sydhcz {
    margin-top: var(--_1j6vlxo8);
  }
  ._139sydhd3 {
    margin-top: 0;
  }
  ._139sydhd7 {
    margin-bottom: var(--_1j6vlxo0);
  }
  ._139sydhdb {
    margin-bottom: var(--_1j6vlxo1);
  }
  ._139sydhdf {
    margin-bottom: var(--_1j6vlxo2);
  }
  ._139sydhdj {
    margin-bottom: var(--_1j6vlxo3);
  }
  ._139sydhdn {
    margin-bottom: var(--_1j6vlxo4);
  }
  ._139sydhdr {
    margin-bottom: var(--_1j6vlxo5);
  }
  ._139sydhdv {
    margin-bottom: var(--_1j6vlxo6);
  }
  ._139sydhdz {
    margin-bottom: var(--_1j6vlxo7);
  }
  ._139sydhe3 {
    margin-bottom: var(--_1j6vlxo8);
  }
  ._139sydhe7 {
    margin-bottom: 0;
  }
  ._139sydheb {
    margin-right: var(--_1j6vlxo0);
  }
  ._139sydhef {
    margin-right: var(--_1j6vlxo1);
  }
  ._139sydhej {
    margin-right: var(--_1j6vlxo2);
  }
  ._139sydhen {
    margin-right: var(--_1j6vlxo3);
  }
  ._139sydher {
    margin-right: var(--_1j6vlxo4);
  }
  ._139sydhev {
    margin-right: var(--_1j6vlxo5);
  }
  ._139sydhez {
    margin-right: var(--_1j6vlxo6);
  }
  ._139sydhf3 {
    margin-right: var(--_1j6vlxo7);
  }
  ._139sydhf7 {
    margin-right: var(--_1j6vlxo8);
  }
  ._139sydhfb {
    margin-right: 0;
  }
  ._139sydhff {
    margin-left: var(--_1j6vlxo0);
  }
  ._139sydhfj {
    margin-left: var(--_1j6vlxo1);
  }
  ._139sydhfn {
    margin-left: var(--_1j6vlxo2);
  }
  ._139sydhfr {
    margin-left: var(--_1j6vlxo3);
  }
  ._139sydhfv {
    margin-left: var(--_1j6vlxo4);
  }
  ._139sydhfz {
    margin-left: var(--_1j6vlxo5);
  }
  ._139sydhg3 {
    margin-left: var(--_1j6vlxo6);
  }
  ._139sydhg7 {
    margin-left: var(--_1j6vlxo7);
  }
  ._139sydhgb {
    margin-left: var(--_1j6vlxo8);
  }
  ._139sydhgf {
    margin-left: 0;
  }
  ._139sydhgj {
    align-items: flex-start;
  }
  ._139sydhgn {
    align-items: center;
  }
  ._139sydhgr {
    align-items: flex-end;
  }
  ._139sydhgv {
    justify-content: flex-start;
  }
  ._139sydhgz {
    justify-content: center;
  }
  ._139sydhh3 {
    justify-content: flex-end;
  }
  ._139sydhh7 {
    justify-content: space-between;
  }
  ._139sydhhb {
    flex-direction: row;
  }
  ._139sydhhf {
    flex-direction: row-reverse;
  }
  ._139sydhhj {
    flex-direction: column;
  }
  ._139sydhhn {
    flex-direction: column-reverse;
  }
  ._139sydhhr {
    flex-wrap: wrap;
  }
  ._139sydhhv {
    flex-wrap: nowrap;
  }
  ._139sydhhz {
    flex-shrink: 0;
  }
  ._139sydhi3 {
    flex-grow: 0;
  }
  ._139sydhi7 {
    flex-grow: 1;
  }
  ._139sydhib {
    text-align: left;
  }
  ._139sydhif {
    text-align: center;
  }
  ._139sydhij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._139sydh4w {
    display: none;
  }
  ._139sydh50 {
    display: block;
  }
  ._139sydh54 {
    display: inline;
  }
  ._139sydh58 {
    display: inline-block;
  }
  ._139sydh5c {
    display: flex;
  }
  ._139sydh5g {
    position: relative;
  }
  ._139sydh5k {
    position: absolute;
  }
  ._139sydh5o {
    position: fixed;
  }
  ._139sydh5s {
    position: sticky;
  }
  ._139sydh5w {
    border-radius: 0;
  }
  ._139sydh60 {
    border-radius: 9999px;
  }
  ._139sydh64 {
    border-radius: var(--_1j6vlxob);
  }
  ._139sydh68 {
    border-radius: var(--_1j6vlxoc);
  }
  ._139sydh6c {
    border-radius: var(--_1j6vlxod);
  }
  ._139sydh6g {
    border-radius: var(--_1j6vlxoe);
  }
  ._139sydh6k {
    gap: var(--_1j6vlxo0);
  }
  ._139sydh6o {
    gap: var(--_1j6vlxo1);
  }
  ._139sydh6s {
    gap: var(--_1j6vlxo2);
  }
  ._139sydh6w {
    gap: var(--_1j6vlxo3);
  }
  ._139sydh70 {
    gap: var(--_1j6vlxo4);
  }
  ._139sydh74 {
    gap: var(--_1j6vlxo5);
  }
  ._139sydh78 {
    gap: var(--_1j6vlxo6);
  }
  ._139sydh7c {
    gap: var(--_1j6vlxo7);
  }
  ._139sydh7g {
    gap: var(--_1j6vlxo8);
  }
  ._139sydh7k {
    gap: 0;
  }
  ._139sydh7o {
    padding-top: var(--_1j6vlxo0);
  }
  ._139sydh7s {
    padding-top: var(--_1j6vlxo1);
  }
  ._139sydh7w {
    padding-top: var(--_1j6vlxo2);
  }
  ._139sydh80 {
    padding-top: var(--_1j6vlxo3);
  }
  ._139sydh84 {
    padding-top: var(--_1j6vlxo4);
  }
  ._139sydh88 {
    padding-top: var(--_1j6vlxo5);
  }
  ._139sydh8c {
    padding-top: var(--_1j6vlxo6);
  }
  ._139sydh8g {
    padding-top: var(--_1j6vlxo7);
  }
  ._139sydh8k {
    padding-top: var(--_1j6vlxo8);
  }
  ._139sydh8o {
    padding-top: 0;
  }
  ._139sydh8s {
    padding-bottom: var(--_1j6vlxo0);
  }
  ._139sydh8w {
    padding-bottom: var(--_1j6vlxo1);
  }
  ._139sydh90 {
    padding-bottom: var(--_1j6vlxo2);
  }
  ._139sydh94 {
    padding-bottom: var(--_1j6vlxo3);
  }
  ._139sydh98 {
    padding-bottom: var(--_1j6vlxo4);
  }
  ._139sydh9c {
    padding-bottom: var(--_1j6vlxo5);
  }
  ._139sydh9g {
    padding-bottom: var(--_1j6vlxo6);
  }
  ._139sydh9k {
    padding-bottom: var(--_1j6vlxo7);
  }
  ._139sydh9o {
    padding-bottom: var(--_1j6vlxo8);
  }
  ._139sydh9s {
    padding-bottom: 0;
  }
  ._139sydh9w {
    padding-right: var(--_1j6vlxo0);
  }
  ._139sydha0 {
    padding-right: var(--_1j6vlxo1);
  }
  ._139sydha4 {
    padding-right: var(--_1j6vlxo2);
  }
  ._139sydha8 {
    padding-right: var(--_1j6vlxo3);
  }
  ._139sydhac {
    padding-right: var(--_1j6vlxo4);
  }
  ._139sydhag {
    padding-right: var(--_1j6vlxo5);
  }
  ._139sydhak {
    padding-right: var(--_1j6vlxo6);
  }
  ._139sydhao {
    padding-right: var(--_1j6vlxo7);
  }
  ._139sydhas {
    padding-right: var(--_1j6vlxo8);
  }
  ._139sydhaw {
    padding-right: 0;
  }
  ._139sydhb0 {
    padding-left: var(--_1j6vlxo0);
  }
  ._139sydhb4 {
    padding-left: var(--_1j6vlxo1);
  }
  ._139sydhb8 {
    padding-left: var(--_1j6vlxo2);
  }
  ._139sydhbc {
    padding-left: var(--_1j6vlxo3);
  }
  ._139sydhbg {
    padding-left: var(--_1j6vlxo4);
  }
  ._139sydhbk {
    padding-left: var(--_1j6vlxo5);
  }
  ._139sydhbo {
    padding-left: var(--_1j6vlxo6);
  }
  ._139sydhbs {
    padding-left: var(--_1j6vlxo7);
  }
  ._139sydhbw {
    padding-left: var(--_1j6vlxo8);
  }
  ._139sydhc0 {
    padding-left: 0;
  }
  ._139sydhc4 {
    margin-top: var(--_1j6vlxo0);
  }
  ._139sydhc8 {
    margin-top: var(--_1j6vlxo1);
  }
  ._139sydhcc {
    margin-top: var(--_1j6vlxo2);
  }
  ._139sydhcg {
    margin-top: var(--_1j6vlxo3);
  }
  ._139sydhck {
    margin-top: var(--_1j6vlxo4);
  }
  ._139sydhco {
    margin-top: var(--_1j6vlxo5);
  }
  ._139sydhcs {
    margin-top: var(--_1j6vlxo6);
  }
  ._139sydhcw {
    margin-top: var(--_1j6vlxo7);
  }
  ._139sydhd0 {
    margin-top: var(--_1j6vlxo8);
  }
  ._139sydhd4 {
    margin-top: 0;
  }
  ._139sydhd8 {
    margin-bottom: var(--_1j6vlxo0);
  }
  ._139sydhdc {
    margin-bottom: var(--_1j6vlxo1);
  }
  ._139sydhdg {
    margin-bottom: var(--_1j6vlxo2);
  }
  ._139sydhdk {
    margin-bottom: var(--_1j6vlxo3);
  }
  ._139sydhdo {
    margin-bottom: var(--_1j6vlxo4);
  }
  ._139sydhds {
    margin-bottom: var(--_1j6vlxo5);
  }
  ._139sydhdw {
    margin-bottom: var(--_1j6vlxo6);
  }
  ._139sydhe0 {
    margin-bottom: var(--_1j6vlxo7);
  }
  ._139sydhe4 {
    margin-bottom: var(--_1j6vlxo8);
  }
  ._139sydhe8 {
    margin-bottom: 0;
  }
  ._139sydhec {
    margin-right: var(--_1j6vlxo0);
  }
  ._139sydheg {
    margin-right: var(--_1j6vlxo1);
  }
  ._139sydhek {
    margin-right: var(--_1j6vlxo2);
  }
  ._139sydheo {
    margin-right: var(--_1j6vlxo3);
  }
  ._139sydhes {
    margin-right: var(--_1j6vlxo4);
  }
  ._139sydhew {
    margin-right: var(--_1j6vlxo5);
  }
  ._139sydhf0 {
    margin-right: var(--_1j6vlxo6);
  }
  ._139sydhf4 {
    margin-right: var(--_1j6vlxo7);
  }
  ._139sydhf8 {
    margin-right: var(--_1j6vlxo8);
  }
  ._139sydhfc {
    margin-right: 0;
  }
  ._139sydhfg {
    margin-left: var(--_1j6vlxo0);
  }
  ._139sydhfk {
    margin-left: var(--_1j6vlxo1);
  }
  ._139sydhfo {
    margin-left: var(--_1j6vlxo2);
  }
  ._139sydhfs {
    margin-left: var(--_1j6vlxo3);
  }
  ._139sydhfw {
    margin-left: var(--_1j6vlxo4);
  }
  ._139sydhg0 {
    margin-left: var(--_1j6vlxo5);
  }
  ._139sydhg4 {
    margin-left: var(--_1j6vlxo6);
  }
  ._139sydhg8 {
    margin-left: var(--_1j6vlxo7);
  }
  ._139sydhgc {
    margin-left: var(--_1j6vlxo8);
  }
  ._139sydhgg {
    margin-left: 0;
  }
  ._139sydhgk {
    align-items: flex-start;
  }
  ._139sydhgo {
    align-items: center;
  }
  ._139sydhgs {
    align-items: flex-end;
  }
  ._139sydhgw {
    justify-content: flex-start;
  }
  ._139sydhh0 {
    justify-content: center;
  }
  ._139sydhh4 {
    justify-content: flex-end;
  }
  ._139sydhh8 {
    justify-content: space-between;
  }
  ._139sydhhc {
    flex-direction: row;
  }
  ._139sydhhg {
    flex-direction: row-reverse;
  }
  ._139sydhhk {
    flex-direction: column;
  }
  ._139sydhho {
    flex-direction: column-reverse;
  }
  ._139sydhhs {
    flex-wrap: wrap;
  }
  ._139sydhhw {
    flex-wrap: nowrap;
  }
  ._139sydhi0 {
    flex-shrink: 0;
  }
  ._139sydhi4 {
    flex-grow: 0;
  }
  ._139sydhi8 {
    flex-grow: 1;
  }
  ._139sydhic {
    text-align: left;
  }
  ._139sydhig {
    text-align: center;
  }
  ._139sydhik {
    text-align: right;
  }
}
._1lupc6g0 {
  --_1j6vlxo0: 24px;
  --_1j6vlxo1: 8px;
  --_1j6vlxo2: 12px;
  --_1j6vlxo3: 16px;
  --_1j6vlxo4: 24px;
  --_1j6vlxo5: 32px;
  --_1j6vlxo6: 48px;
  --_1j6vlxo7: 64px;
  --_1j6vlxo8: 96px;
  --_1j6vlxo9: 48px;
  --_1j6vlxoa: 4px;
  --_1j6vlxob: 4px;
  --_1j6vlxoc: 8px;
  --_1j6vlxod: 16px;
  --_1j6vlxoe: 24px;
  --_1j6vlxof: #e60278;
  --_1j6vlxog: #f8b1dc;
  --_1j6vlxoh: #fdc221;
  --_1j6vlxoi: #fee384;
  --_1j6vlxoj: #b91e1e;
  --_1j6vlxok: #fb999a;
  --_1j6vlxol: #838fa5;
  --_1j6vlxom: rgba(153, 191, 247, 0.7);
  --_1j6vlxon: #1e47a9;
  --_1j6vlxoo: #99bff7;
  --_1j6vlxop: #1d559d;
  --_1j6vlxoq: #98c9f1;
  --_1j6vlxor: #2e3849;
  --_1j6vlxot: #eaecf1;
  --_1j6vlxos: #fff;
  --_1j6vlxou: #12784f;
  --_1j6vlxov: #8bdec5;
  --_1j6vlxow: #7f35a9;
  --_1j6vlxox: #e1b2f5;
  --_1j6vlxoy: 2px;
  --_1j6vlxoz: 4px;
  --_1j6vlxo10: 6px;
  --_1j6vlxo11: 400px;
  --_1j6vlxo12: 660px;
  --_1j6vlxo13: 940px;
  --_1j6vlxo14: 1280px;
  --_1j6vlxo15: #e60278;
  --_1j6vlxo16: #f8b1dc;
  --_1j6vlxo17: #723d02;
  --_1j6vlxo18: #fee384;
  --_1j6vlxo19: #b91e1e;
  --_1j6vlxo1a: #fb999a;
  --_1j6vlxo1b: #1e47a9;
  --_1j6vlxo1c: #99bff7;
  --_1j6vlxo1d: #1d559d;
  --_1j6vlxo1e: #98c9f1;
  --_1j6vlxo1f: #2e3849;
  --_1j6vlxo1h: #fff;
  --_1j6vlxo1g: #2e3849;
  --_1j6vlxo1i: #5b2084;
  --_1j6vlxo1j: #f0d6fa;
  --_1j6vlxo1k: #2e3849;
  --_1j6vlxo1l: #fff;
  --_1j6vlxo1m: #12784f;
  --_1j6vlxo1n: #8bdec5;
  --_1j6vlxo1o: #7f35a9;
  --_1j6vlxo1p: #e1b2f5;
  --_1j6vlxo1q: #5a6881;
  --_1j6vlxo1r: hsla(0, 0%, 100%, 0.65);
  --_1j6vlxo1s: #fff;
  --_1j6vlxo1t: #1c2330;
  --_1j6vlxo1u: #051a49;
  --_1j6vlxo1v: #e60278;
  --_1j6vlxo1w: #cd026b;
  --_1j6vlxo1x: #fd0585;
  --_1j6vlxo1y: #feeffa;
  --_1j6vlxo1z: #fdd7f3;
  --_1j6vlxo20: #fde3f6;
  --_1j6vlxo21: #fdc221;
  --_1j6vlxo22: #fef8de;
  --_1j6vlxo23: #b91e1e;
  --_1j6vlxo24: #a31a1a;
  --_1j6vlxo25: #db1616;
  --_1j6vlxo26: #ffe3e2;
  --_1j6vlxo27: #fef3f3;
  --_1j6vlxo28: #fcdbdb;
  --_1j6vlxo29: #fde7e7;
  --_1j6vlxo2a: #1e47a9;
  --_1j6vlxo2b: #1a3e93;
  --_1j6vlxo2c: #2455c9;
  --_1j6vlxo2d: #f0f7fe;
  --_1j6vlxo2e: #d8eafc;
  --_1j6vlxo2f: #e4f1fd;
  --_1j6vlxo2g: #1d559d;
  --_1j6vlxo2h: #e3f2fb;
  --_1j6vlxo2i: #2e3849;
  --_1j6vlxo2j: #242c39;
  --_1j6vlxo2k: #384459;
  --_1j6vlxo2l: #f3f5f7;
  --_1j6vlxo2m: #f3f5f7;
  --_1j6vlxo2n: #e4e8ed;
  --_1j6vlxo2o: #ebeff2;
  --_1j6vlxo2p: #12784f;
  --_1j6vlxo2q: #e2f7f1;
  --_1j6vlxo2r: #7f35a9;
  --_1j6vlxo2s: #f9ebfd;
  --_1j6vlxo2t: #fff;
  --_1j6vlxo2u: #1c2330;
  --_1j6vlxo2v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1j6vlxo2w: 783;
  --_1j6vlxo2x: 1057;
  --_1j6vlxo2y: -274;
  --_1j6vlxo2z: 0;
  --_1j6vlxo30: 1000;
  --_1j6vlxo3v: 18px;
  --_1j6vlxo3w: 27.094px;
  --_1j6vlxo3x: 14.094px;
  --_1j6vlxo3y: -0.3611em;
  --_1j6vlxo3z: -0.3611em;
  --_1j6vlxo40: 18px;
  --_1j6vlxo41: 27.094px;
  --_1j6vlxo42: 14.094px;
  --_1j6vlxo43: -0.3611em;
  --_1j6vlxo44: -0.3611em;
  --_1j6vlxo3l: 16px;
  --_1j6vlxo3m: 24.528px;
  --_1j6vlxo3n: 12.528px;
  --_1j6vlxo3o: -0.375em;
  --_1j6vlxo3p: -0.375em;
  --_1j6vlxo3q: 16px;
  --_1j6vlxo3r: 24.528px;
  --_1j6vlxo3s: 12.528px;
  --_1j6vlxo3t: -0.375em;
  --_1j6vlxo3u: -0.375em;
  --_1j6vlxo3b: 14px;
  --_1j6vlxo3c: 20.962px;
  --_1j6vlxo3d: 10.962px;
  --_1j6vlxo3e: -0.3571em;
  --_1j6vlxo3f: -0.3571em;
  --_1j6vlxo3g: 14px;
  --_1j6vlxo3h: 20.962px;
  --_1j6vlxo3i: 10.962px;
  --_1j6vlxo3j: -0.3571em;
  --_1j6vlxo3k: -0.3571em;
  --_1j6vlxo31: 12px;
  --_1j6vlxo32: 18.396px;
  --_1j6vlxo33: 9.396px;
  --_1j6vlxo34: -0.375em;
  --_1j6vlxo35: -0.375em;
  --_1j6vlxo36: 12px;
  --_1j6vlxo37: 18.396px;
  --_1j6vlxo38: 9.396px;
  --_1j6vlxo39: -0.375em;
  --_1j6vlxo3a: -0.375em;
  --_1j6vlxo45: 400;
  --_1j6vlxo46: 600;
  --_1j6vlxo47: 700;
  --_1j6vlxo48: 28px;
  --_1j6vlxo49: 32.924px;
  --_1j6vlxo4a: 21.924px;
  --_1j6vlxo4b: -0.1964em;
  --_1j6vlxo4c: -0.1964em;
  --_1j6vlxo4d: 36px;
  --_1j6vlxo4e: 42.188px;
  --_1j6vlxo4f: 28.188px;
  --_1j6vlxo4g: -0.1944em;
  --_1j6vlxo4h: -0.1944em;
  --_1j6vlxo4i: 24px;
  --_1j6vlxo4j: 29.792px;
  --_1j6vlxo4k: 18.792px;
  --_1j6vlxo4l: -0.2292em;
  --_1j6vlxo4m: -0.2292em;
  --_1j6vlxo4n: 30px;
  --_1j6vlxo4o: 36.49px;
  --_1j6vlxo4p: 23.49px;
  --_1j6vlxo4q: -0.2167em;
  --_1j6vlxo4r: -0.2167em;
  --_1j6vlxo4s: 22px;
  --_1j6vlxo4t: 27.226px;
  --_1j6vlxo4u: 17.226px;
  --_1j6vlxo4v: -0.2273em;
  --_1j6vlxo4w: -0.2273em;
  --_1j6vlxo4x: 24px;
  --_1j6vlxo4y: 29.792px;
  --_1j6vlxo4z: 18.792px;
  --_1j6vlxo50: -0.2292em;
  --_1j6vlxo51: -0.2292em;
  --_1j6vlxo52: 20px;
  --_1j6vlxo53: 24.66px;
  --_1j6vlxo54: 15.66px;
  --_1j6vlxo55: -0.225em;
  --_1j6vlxo56: -0.225em;
  --_1j6vlxo57: 20px;
  --_1j6vlxo58: 24.66px;
  --_1j6vlxo59: 15.66px;
  --_1j6vlxo5a: -0.225em;
  --_1j6vlxo5b: -0.225em;
  --_1j6vlxo5c: 400;
  --_1j6vlxo5d: 600;
  --_1j6vlxo5e: underline;
  --_1j6vlxo5f: 24px;
  --_1j6vlxo5g: 20px;
  --_1j6vlxo5h: transform 0.125s ease, opacity 0.125s ease;
  --_1j6vlxo5i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1j6vlxo5j: scale(0.95);
  --_1j6vlxo5k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1j6vlxo5l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1j6vlxo5m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1xascs94 {
  font-size: var(--_1xascs90);
  line-height: var(--_1xascs91);
}
._1xascs94:before {
  content: "";
  display: table;
  margin-bottom: var(--_1xascs92);
}
._1xascs94:after {
  content: "";
  display: table;
  margin-top: var(--_1xascs93);
}
._1lh05ee0 {
  font-family: var(--_1j6vlxo2v);
}
._1lh05ee1 {
  font-weight: var(--_1j6vlxo45);
}
._1lh05ee2 {
  font-weight: var(--_1j6vlxo46);
}
._1lh05ee3 {
  font-weight: var(--_1j6vlxo47);
}
._1lh05ee4 {
  --_1xascs90: var(--_1j6vlxo31);
  --_1xascs91: var(--_1j6vlxo32);
  --_1xascs92: var(--_1j6vlxo34);
  --_1xascs93: var(--_1j6vlxo35);
}
._1lh05ee6 {
  --_1xascs90: var(--_1j6vlxo3b);
  --_1xascs91: var(--_1j6vlxo3c);
  --_1xascs92: var(--_1j6vlxo3e);
  --_1xascs93: var(--_1j6vlxo3f);
}
._1lh05ee8 {
  --_1xascs90: var(--_1j6vlxo3l);
  --_1xascs91: var(--_1j6vlxo3m);
  --_1xascs92: var(--_1j6vlxo3o);
  --_1xascs93: var(--_1j6vlxo3p);
}
._1lh05eea {
  --_1xascs90: var(--_1j6vlxo3v);
  --_1xascs91: var(--_1j6vlxo3w);
  --_1xascs92: var(--_1j6vlxo3y);
  --_1xascs93: var(--_1j6vlxo3z);
}
._1lh05eec {
  font-size: var(--_1j6vlxo31);
  line-height: var(--_1j6vlxo32);
}
._1lh05eed {
  font-size: var(--_1j6vlxo3b);
  line-height: var(--_1j6vlxo3c);
}
._1lh05eee {
  font-size: var(--_1j6vlxo3l);
  line-height: var(--_1j6vlxo3m);
}
._1lh05eef {
  font-size: var(--_1j6vlxo3v);
  line-height: var(--_1j6vlxo3w);
}
._1lh05eeg {
  font-weight: var(--_1j6vlxo5c);
}
._1lh05eeh {
  font-weight: var(--_1j6vlxo5d);
}
._1lh05eei {
  --_1xascs90: var(--_1j6vlxo48);
  --_1xascs91: var(--_1j6vlxo49);
  --_1xascs92: var(--_1j6vlxo4b);
  --_1xascs93: var(--_1j6vlxo4c);
}
._1lh05eek {
  --_1xascs90: var(--_1j6vlxo4i);
  --_1xascs91: var(--_1j6vlxo4j);
  --_1xascs92: var(--_1j6vlxo4l);
  --_1xascs93: var(--_1j6vlxo4m);
}
._1lh05eem {
  --_1xascs90: var(--_1j6vlxo4s);
  --_1xascs91: var(--_1j6vlxo4t);
  --_1xascs92: var(--_1j6vlxo4v);
  --_1xascs93: var(--_1j6vlxo4w);
}
._1lh05eeo {
  --_1xascs90: var(--_1j6vlxo52);
  --_1xascs91: var(--_1j6vlxo53);
  --_1xascs92: var(--_1j6vlxo55);
  --_1xascs93: var(--_1j6vlxo56);
}
html:not(._139sydh10) ._1lh05ee10 {
  --_1lh05eeq: var(--_1j6vlxo19);
  --_1lh05eer: var(--_1j6vlxo17);
  --_1lh05ees: var(--_1j6vlxo1d);
  --_1lh05eet: var(--_1j6vlxo1o);
  --_1lh05eeu: var(--_1j6vlxo1m);
  --_1lh05eev: var(--_1j6vlxo15);
  --_1lh05eew: var(--_1j6vlxo1b);
  --_1lh05eex: var(--_1j6vlxo1k);
  --_1lh05eey: var(--_1j6vlxo1q);
  --_1lh05eez: var(--_1j6vlxo1f);
}
html:not(._139sydh10) ._1lh05ee11 {
  --_1lh05eeq: var(--_1j6vlxo1a);
  --_1lh05eer: var(--_1j6vlxo18);
  --_1lh05ees: var(--_1j6vlxo1e);
  --_1lh05eet: var(--_1j6vlxo1p);
  --_1lh05eeu: var(--_1j6vlxo1n);
  --_1lh05eev: var(--_1j6vlxo16);
  --_1lh05eew: var(--_1j6vlxo1c);
  --_1lh05eex: var(--_1j6vlxo1l);
  --_1lh05eey: var(--_1j6vlxo1r);
  --_1lh05eez: var(--_1j6vlxo1h);
}
html._139sydh10 ._1lh05ee12 {
  --_1lh05eeq: var(--_1j6vlxo19);
  --_1lh05eer: var(--_1j6vlxo17);
  --_1lh05ees: var(--_1j6vlxo1d);
  --_1lh05eet: var(--_1j6vlxo1o);
  --_1lh05eeu: var(--_1j6vlxo1m);
  --_1lh05eev: var(--_1j6vlxo15);
  --_1lh05eew: var(--_1j6vlxo1b);
  --_1lh05eex: var(--_1j6vlxo1k);
  --_1lh05eey: var(--_1j6vlxo1q);
  --_1lh05eez: var(--_1j6vlxo1f);
}
html._139sydh10 ._1lh05ee13 {
  --_1lh05eeq: var(--_1j6vlxo1a);
  --_1lh05eer: var(--_1j6vlxo18);
  --_1lh05ees: var(--_1j6vlxo1e);
  --_1lh05eet: var(--_1j6vlxo1p);
  --_1lh05eeu: var(--_1j6vlxo1n);
  --_1lh05eev: var(--_1j6vlxo16);
  --_1lh05eew: var(--_1j6vlxo1c);
  --_1lh05eex: var(--_1j6vlxo1l);
  --_1lh05eey: var(--_1j6vlxo1r);
  --_1lh05eez: var(--_1j6vlxo1h);
}
html:not(._139sydh10) ._1lh05ee14,
html:not(._139sydh10) ._1lh05ee15,
html:not(._139sydh10) ._1lh05ee16,
html:not(._139sydh10) ._1lh05ee17 {
  --_1lh05eex: var(--_1lh05eeq);
}
html:not(._139sydh10) ._1lh05ee18,
html:not(._139sydh10) ._1lh05ee19 {
  --_1lh05eex: var(--_1lh05eer);
}
html:not(._139sydh10) ._1lh05ee1a {
  --_1lh05eex: var(--_1lh05eeu);
}
html:not(._139sydh10) ._1lh05ee1b {
  --_1lh05eex: var(--_1lh05ees);
}
html:not(._139sydh10) ._1lh05ee1c {
  --_1lh05eex: var(--_1lh05eet);
}
html._139sydh10 ._1lh05ee1d,
html._139sydh10 ._1lh05ee1e,
html._139sydh10 ._1lh05ee1f,
html._139sydh10 ._1lh05ee1g {
  --_1lh05eex: var(--_1lh05eeq);
}
html._139sydh10 ._1lh05ee1h,
html._139sydh10 ._1lh05ee1i {
  --_1lh05eex: var(--_1lh05eer);
}
html._139sydh10 ._1lh05ee1j {
  --_1lh05eex: var(--_1lh05eeu);
}
html._139sydh10 ._1lh05ee1k {
  --_1lh05eex: var(--_1lh05ees);
}
html._139sydh10 ._1lh05ee1l {
  --_1lh05eex: var(--_1lh05eet);
}
._1lh05ee1m {
  color: var(--_1lh05eeq);
}
._1lh05ee1n {
  color: var(--_1lh05eer);
}
._1lh05ee1o {
  color: var(--_1lh05ees);
}
._1lh05ee1p {
  color: var(--_1lh05eet);
}
._1lh05ee1q {
  color: var(--_1lh05eeu);
}
._1lh05ee1r {
  color: var(--_1lh05eev);
}
._1lh05ee1s {
  color: var(--_1lh05eew);
}
._1lh05ee1t {
  color: var(--_1lh05eex);
}
._1lh05ee1u {
  color: var(--_1lh05eey);
}
._1lh05ee1v {
  color: var(--_1lh05eez);
}
._1lh05ee1w {
  padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo32)) / 2);
  padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo32)) / 2);
}
._1lh05ee1x {
  padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3c)) / 2);
  padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3c)) / 2);
}
._1lh05ee1y {
  padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3m)) / 2);
  padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3m)) / 2);
}
._1lh05ee1z {
  padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3w)) / 2);
  padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3w)) / 2);
}
@media screen and (min-width: 740px) {
  ._1lh05ee4 {
    --_1xascs90: var(--_1j6vlxo36);
    --_1xascs91: var(--_1j6vlxo37);
    --_1xascs92: var(--_1j6vlxo39);
    --_1xascs93: var(--_1j6vlxo3a);
  }
  ._1lh05ee6 {
    --_1xascs90: var(--_1j6vlxo3g);
    --_1xascs91: var(--_1j6vlxo3h);
    --_1xascs92: var(--_1j6vlxo3j);
    --_1xascs93: var(--_1j6vlxo3k);
  }
  ._1lh05ee8 {
    --_1xascs90: var(--_1j6vlxo3q);
    --_1xascs91: var(--_1j6vlxo3r);
    --_1xascs92: var(--_1j6vlxo3t);
    --_1xascs93: var(--_1j6vlxo3u);
  }
  ._1lh05eea {
    --_1xascs90: var(--_1j6vlxo40);
    --_1xascs91: var(--_1j6vlxo41);
    --_1xascs92: var(--_1j6vlxo43);
    --_1xascs93: var(--_1j6vlxo44);
  }
  ._1lh05eec {
    font-size: var(--_1j6vlxo36);
    line-height: var(--_1j6vlxo37);
  }
  ._1lh05eed {
    font-size: var(--_1j6vlxo3g);
    line-height: var(--_1j6vlxo3h);
  }
  ._1lh05eee {
    font-size: var(--_1j6vlxo3q);
    line-height: var(--_1j6vlxo3r);
  }
  ._1lh05eef {
    font-size: var(--_1j6vlxo40);
    line-height: var(--_1j6vlxo41);
  }
  ._1lh05eei {
    --_1xascs90: var(--_1j6vlxo4d);
    --_1xascs91: var(--_1j6vlxo4e);
    --_1xascs92: var(--_1j6vlxo4g);
    --_1xascs93: var(--_1j6vlxo4h);
  }
  ._1lh05eek {
    --_1xascs90: var(--_1j6vlxo4n);
    --_1xascs91: var(--_1j6vlxo4o);
    --_1xascs92: var(--_1j6vlxo4q);
    --_1xascs93: var(--_1j6vlxo4r);
  }
  ._1lh05eem {
    --_1xascs90: var(--_1j6vlxo4x);
    --_1xascs91: var(--_1j6vlxo4y);
    --_1xascs92: var(--_1j6vlxo50);
    --_1xascs93: var(--_1j6vlxo51);
  }
  ._1lh05eeo {
    --_1xascs90: var(--_1j6vlxo57);
    --_1xascs91: var(--_1j6vlxo58);
    --_1xascs92: var(--_1j6vlxo5a);
    --_1xascs93: var(--_1j6vlxo5b);
  }
  ._1lh05ee1w {
    padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo37)) / 2);
    padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo37)) / 2);
  }
  ._1lh05ee1x {
    padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3h)) / 2);
    padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3h)) / 2);
  }
  ._1lh05ee1y {
    padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3r)) / 2);
    padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo3r)) / 2);
  }
  ._1lh05ee1z {
    padding-bottom: calc((var(--_1j6vlxo9) - var(--_1j6vlxo41)) / 2);
    padding-top: calc((var(--_1j6vlxo9) - var(--_1j6vlxo41)) / 2);
  }
}
._1bfo9p26 {
  background: var(--_1bfo9p20);
}
._1bfo9p27 {
  background: var(--_1bfo9p21);
}
._1bfo9p28 {
  background: var(--_1bfo9p22);
}
._1bfo9p29 {
  background: var(--_1bfo9p23);
}
._1bfo9p2a {
  background: var(--_1bfo9p24);
}
._1bfo9p2b {
  background: var(--_1bfo9p25);
}
html:not(._139sydh10) ._1bfo9p2c {
  --_1bfo9p20: var(--_1j6vlxow);
  --_1bfo9p21: var(--_1j6vlxop);
  --_1bfo9p22: var(--_1j6vlxou);
  --_1bfo9p23: var(--_1j6vlxoh);
  --_1bfo9p24: var(--_1j6vlxoj);
  --_1bfo9p25: var(--_1j6vlxon);
}
html:not(._139sydh10) ._1bfo9p2d {
  --_1bfo9p20: var(--_1j6vlxox);
  --_1bfo9p21: var(--_1j6vlxoq);
  --_1bfo9p22: var(--_1j6vlxov);
  --_1bfo9p23: var(--_1j6vlxoi);
  --_1bfo9p24: var(--_1j6vlxok);
  --_1bfo9p25: var(--_1j6vlxoo);
}
html._139sydh10 ._1bfo9p2e {
  --_1bfo9p20: var(--_1j6vlxow);
  --_1bfo9p21: var(--_1j6vlxop);
  --_1bfo9p22: var(--_1j6vlxou);
  --_1bfo9p23: var(--_1j6vlxoh);
  --_1bfo9p24: var(--_1j6vlxoj);
  --_1bfo9p25: var(--_1j6vlxon);
}
html._139sydh10 ._1bfo9p2f {
  --_1bfo9p20: var(--_1j6vlxox);
  --_1bfo9p21: var(--_1j6vlxoq);
  --_1bfo9p22: var(--_1j6vlxov);
  --_1bfo9p23: var(--_1j6vlxoi);
  --_1bfo9p24: var(--_1j6vlxok);
  --_1bfo9p25: var(--_1j6vlxoo);
}
._1bfo9p2g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1bfo9p2h {
  width: var(--_1j6vlxoe);
}
._1bfo9p2i {
  width: var(--_1j6vlxoa);
}
.ok3m2x0 {
  margin-bottom: -0.1em;
}
.ok3m2x2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.ok3m2x0 .ok3m2x2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .ok3m2x4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--ok3m2x3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__139sydh10,html.sprinkles_darkMode__139sydh10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1lupc6g0 typography_lightModeTone_light__1lh05ee10 typography_darkModeTone_dark__1lh05ee13">
+        <div class="reset_base__sl5oi80 sprinkles_paddingBottom_gutter_mobile__139sydh8p sprinkles_paddingTop_gutter_mobile__139sydh7l sprinkles_paddingLeft_gutter_mobile__139sydhax sprinkles_paddingRight_gutter_mobile__139sydh9t sprinkles_position_relative_mobile__139sydh5d sprinkles_borderRadius_large_mobile__139sydh69 sprinkles_textAlign_left_mobile__139sydhi9 sprinkles_boxShadow_borderNeutralLight_lightMode__139sydh4j sprinkles_boxShadow_borderNeutral_darkMode__139sydh4c typography_lightModeTone_light__1lh05ee10 typography_darkModeTone_dark__1lh05ee13 sprinkles_background_surface_lightMode__139sydh33 sprinkles_background_surfaceDark_darkMode__139sydh36">
+          <span class="reset_base__sl5oi80 sprinkles_display_block_mobile__139sydh4x typography_fontFamily__1lh05ee0 typography_fontWeight_regular__1lh05ee1 typography_tone_neutral__1lh05ee1t typography_textSize_large__1lh05eea capsize_capsizeStyle__1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
